--- a/assests/css/style2.css
+++ b/assests/css/style2.css
@@ -37,61 +37,103 @@ a:hover{
 
 /***main***/
 body{
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: #777777;
     background-image: url("../images/otis_redding.png");
 }
-.about{
-    padding: 20px;
-    background-image: url("../images/diagonal_waves.png");
-    margin: 70px auto;
-    width: 960px;
-    height: 800px;
+* {
+    box-sizing: border-box;
+  }
+  
+h1, h3, p {
+  margin-bottom: 20px;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+h1, h3 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+  color: #4aaaa5;
+}
+
+h1 {
+  padding-bottom: 20px;
+  font-size: 30px;
+  line-height: 49px;
+  border-bottom: 3px solid #dddddd;
+}
+h3 {
+  font-size: 22px;
+}
+.container {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    clear: both;
+  }
+  
+#main-container {
+    padding-top: 130px;
+    min-height: calc(100vh - 70px);
+  }
+  
+  .main-section {
+    float: left;
+    width: 100%;
+    max-width: 960px;
+    padding: 30px;
+    margin: 0 0 40px;
+    background: #ffffff;
     border: 1px solid #dddddd;
-}
-h2{
-    color: #4aaaa5;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    border-bottom: 1px solid black;
-    padding-bottom: 30px;
-}
-#RPG-Game, #Hangman, #trivia, #widget, #rock{
-    margin-right: 20px;
-    width: 150px;
-    height: 200px;
-}
-#RPG-Game{
-    background-image: url("../images/rpg.png");
-}
-#Hangman{
-    background-image: url("../images/hangman.png");
-}
-#trivia{
-    background-image: url("../images/trivia.jpg");
-}
-#widget{
-    background-image: url("../images/widget.jpg");
-}
-#rock{
-    background-image: url("../images/rock.jpg");
-}
-.pg{
-   background: rgba(74, 170, 165, 0.8);
-   text-align: center;
-   padding: 10px 0;
-   color: #ffffff;
-   top: 142px;
-   position: relative;
-   font-size: 16px;
-   font-family: 'Georgia', Times, Times New Roman, serif;
-}
-.container{
-    margin: 40px 300px;
-}
-.col1{
+  }
+  
+  /* portfolio page */
+  
+  .work {
+    position: relative;
     float: left;
-}
-.col2{
+    width: 274px;
+    margin: 20px 0 25px;
+    overflow: auto;
+  }
+  
+  .work:nth-child(even) {
+    margin-right: 40px;
+  }
+  
+  .work img {
+    width: 100%;
+    border: 0 none;
+    opacity: 0.8;
+  }
+  
+  .work h3 {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 0;
+    font-weight: 300;
+    line-height: 30px;
+    color: #ffffff;
+    text-align: center;
+    background: #4aaaa5;
+    border-bottom: 0;
+  }
+  
+  .auth-image {
     float: left;
-}
+    width: 200px;
+    height: auto;
+    margin-top: 10px;
+    margin-right: 25px;
+  }
+  
 /**footer**/
 .foot{
     background-image: url("../images/dark-honeycomb.png");
